2021-07-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jp2.c: Assure that the designated decoder is used rather
        than using autodetection and possibly using a different decoder
        than intended. Added experimental support for JasPer
        HAVE_JAS_INIT_CUSTOM feature, but leave disabled by default.  Fix
        a stream manager bug noticed with the madams-callbacks branch of
        JasPer.

2021-06-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/msl.c (ProcessMSLScript): Fix possible use of freed
        memory.  Fixes oss-fuzz 35621 "graphicsmagick:coder_MSL_fuzzer:
        ASSERT: image->signature == MagickSignature".

        * fuzzing/oss-fuzz-build.sh: Disable reading and writing of
        gzip/bzip files since we don't have a viable solution for formats
        which require an uncompressed file as input.

2021-06-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/pcx.c (ReadPCXImage): Fix problem that 16-colors are used
        rather than 256-colors given sample file provided.  Resolves
        SourceForge patch #65 "PCX file not read correctly".  Patch is by
        Sam Yang.

        * coders/jp2.c (ReadJP2Image): Pass "max_samples" option to Jasper
        to try to limit the amount of memory it may allocate while opening
        a file.  Addresses oss-fuzz 35265
        "graphicsmagick:coder_PGX_fuzzer: Out-of-memory in
        coder_PGX_fuzzer".

2021-06-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/webp.c (ReadWEBPImage): Use SetImagePixelsEx() rather
        than GetImagePixelsEx() in reader.  Patch by Tobias Mark via
        SourceForge patch #66 "Minor improvment webp".

2021-06-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/svg.c (GetTransformTokens): Fix massive over-allocation
        of string due to use of AcquireString() on entire remaining text