@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020210705"
-#define public MagickPackageReleaseDate "snapshot-20210705"
+#define public MagickPackageVersionAddendum ".020210716"
+#define public MagickPackageReleaseDate "snapshot-20210716"
