@@ -1,3 +1,9 @@
+2021-07-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+        * coders/jp2.c (initialize_jasper): Update for the latest version
+        of the evolving jas_init_custom() interface provided by the
+        mdadams-callbacks branch.
+
 2021-07-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
         * coders/jp2.c: Assure that the designated decoder is used rather
